[project]
name = "llamagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "markupsafe==2.1.5",
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
