[project]
name = "llamagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.20"
dependencies = [
    "gradio>=4.44.1",
    "huggingface-hub>=0.26.2",
    "ray==2.10.0", # is the latest version compatible with python 3.8
    "setuptools>=75.3.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "vllm==0.4.1", # MUST and requires python 3.8
]
